Ingress/ArgoCD/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ui
  labels:
    name: argocd-ui
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: pgr.argocd-ui.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port: 
              number: 80
